sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() 
{
		var i;
		var debut : Int = 0;
		var fin : Int = getNombreValeurs()-2;
		var echEffect : Int = 1;
		
	while (echEffect == 1)
	{
		echEffect = 0;
	     i = debut;
		while (i<getNombreValeurs()-1)
		{
			if(plusPetit(i+1,i))
			{
				echange(i,i+1);
				echEffect = 1;
			}
			i=i+1;
		}
		fin = fin - 1;
          i = fin;
	
		while(i>0)
		{
			if(plusPetit(i,i-1))
			{
				echange(i,i-1);
				echEffect = 1;
			}
			i=i-1;
		}
		debut = debut + 1;
		
		
	}
}